--- a/frontend/src/app/dashboard/dashboard/dashboard.html
+++ b/frontend/src/app/dashboard/dashboard/dashboard.html
@@ -14,6 +14,10 @@
     <div class="user-controls">
       <span class="username">Hola, {{ username }}</span>
 
+      <button mat-icon-button (click)="openReportesModal()" matTooltip="Reportes Avanzados">
+        <mat-icon>assessment</mat-icon>
+      </button>
+
       <!-- Theme Toggle Switch -->
       <div class="theme-toggle-container">
         <mat-icon class="theme-icon sun-icon" [class.active]="!isDarkTheme">light_mode</mat-icon>
